// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorList component renders a no items message when no data is provided 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="s"
>
  <EuiTitle
    size="xs"
  >
    <h5>
      <FormattedMessage
        defaultMessage="Monitor status"
        id="xpack.uptime.monitorList.monitoringStatusTitle"
        values={Object {}}
      />
    </h5>
  </EuiTitle>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "monitor_id",
          "name": "",
          "render": [Function],
          "sortable": true,
          "width": "40px",
        },
        Object {
          "field": "state.monitor.status",
          "name": "Status",
          "render": [Function],
        },
        Object {
          "field": "state.monitor.name",
          "name": "Name",
          "render": [Function],
          "sortable": true,
        },
        Object {
          "field": "state.url.full",
          "name": "URL",
          "render": [Function],
          "sortable": true,
        },
        Object {
          "field": "state.checks",
          "name": "Checks",
          "render": [Function],
        },
        Object {
          "field": "histogram.points",
          "name": "Downtime history",
          "render": [Function],
        },
        Object {
          "align": "right",
          "field": "state",
          "name": "Integrations",
          "render": [Function],
        },
      ]
    }
    isExpandable={true}
    itemId="monitor_id"
    itemIdToExpandedRowMap={Object {}}
    items={Array []}
    loading={false}
    noItemsMessage="No uptime monitors found"
    responsive={true}
  />
</EuiPanel>
`;

exports[`MonitorList component renders the monitor list 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="s"
>
  <EuiTitle
    size="xs"
  >
    <h5>
      <FormattedMessage
        defaultMessage="Monitor status"
        id="xpack.uptime.monitorList.monitoringStatusTitle"
        values={Object {}}
      />
    </h5>
  </EuiTitle>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "monitor_id",
          "name": "",
          "render": [Function],
          "sortable": true,
          "width": "40px",
        },
        Object {
          "field": "state.monitor.status",
          "name": "Status",
          "render": [Function],
        },
        Object {
          "field": "state.monitor.name",
          "name": "Name",
          "render": [Function],
          "sortable": true,
        },
        Object {
          "field": "state.url.full",
          "name": "URL",
          "render": [Function],
          "sortable": true,
        },
        Object {
          "field": "state.checks",
          "name": "Checks",
          "render": [Function],
        },
        Object {
          "field": "histogram.points",
          "name": "Downtime history",
          "render": [Function],
        },
        Object {
          "align": "right",
          "field": "state",
          "name": "Integrations",
          "render": [Function],
        },
      ]
    }
    isExpandable={true}
    itemId="monitor_id"
    itemIdToExpandedRowMap={Object {}}
    items={
      Array [
        Object {
          "monitor_id": "foo",
          "state": Object {
            "checks": Array [
              Object {
                "monitor": Object {
                  "ip": "127.0.0.1",
                  "status": "up",
                },
                "timestamp": "124",
              },
              Object {
                "monitor": Object {
                  "ip": "127.0.0.2",
                  "status": "down",
                },
                "timestamp": "125",
              },
              Object {
                "monitor": Object {
                  "ip": "127.0.0.3",
                  "status": "down",
                },
                "timestamp": "126",
              },
            ],
            "summary": Object {
              "down": 2,
              "up": 1,
            },
            "timestamp": "123",
          },
        },
        Object {
          "monitor_id": "bar",
          "state": Object {
            "checks": Array [
              Object {
                "monitor": Object {
                  "ip": "127.0.0.1",
                  "status": "up",
                },
                "timestamp": "125",
              },
              Object {
                "monitor": Object {
                  "ip": "127.0.0.2",
                  "status": "up",
                },
                "timestamp": "126",
              },
            ],
            "summary": Object {
              "down": 0,
              "up": 2,
            },
            "timestamp": "125",
          },
        },
      ]
    }
    loading={false}
    noItemsMessage="No uptime monitors found"
    responsive={true}
  />
</EuiPanel>
`;
